# Saludmecum

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  vademecum.yml
scripts/: build_full.sh  build_incremental.sh
src/vademecum_builder/: __init__.py  __main__.py  build_full.py  build_incremental.py  cima_client.py  config.py  incremental.py  manifest.py  nomenclator_loader.py  state.py  utils.py
tests/: test_build_full.py  test_build_incremental.py  test_nomenclator_loader.py
