[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vademecum-builder"
version = "0.1.0"
description = "Offline vademecum builder from CIMA with full and incremental modes"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Data Engineering Team" }]
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
excel = [
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "types-requests>=2.32.0.20240712",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = []
